--- a/src/scss/spm.scss
+++ b/src/scss/spm.scss
@@ -14,10 +14,16 @@
     display: none;
 }
 
-.header .navbar-brand img {
-    display: inline-block;
-    height: auto;
-    width: 300px;
+#mobile-menu {
+    display: none;
+}
+
+.header {
+    color: $dark;
+}
+
+.header img {
+    margin: 20px;
 }
 
 .header .navbar-secondary {
@@ -25,12 +31,49 @@
     font-size: 0.875rem;
     line-height: 1.1;
     margin: 0;
+    text-align: right;
+}
+
+.navbar-secondary ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.navbar-secondary li {
+    display: inline-block;
+    padding: 15px 10px;
+}
+
+.navbar-secondary li.search {
+    display: inline-block;
+    padding: 0;
+    margin-right: 10px;
+    background: #fff !important;
+}
+
+.navbar-secondary li input {
+    font-size: 0.875rem !important;
+    line-height: 1.1 !important;
+}
+
+
+.navbar-primary ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.navbar-primary li {
+    display: inline-block;
+    padding: 10px;
 }
 
 .header .navbar-primary {
     font-weight: bold;
     line-height: 1.2;
     margin: 35px 0 0 0;
+    text-align: right;
 }
 
 .navbar-secondary a:link, .navbar-secondary a:visited { color: #fff; }
@@ -54,19 +97,23 @@
     margin-bottom: 0;
 }
 
-.sub-menu li {
-    display: inline;
-    margin-right: 20px;
-}
+@media (min-width: 992px) {
+    .sub-menu li {
+        display: inline;
+        margin-right: 20px;
+    }
 
-.sub-menu li:last-child {
-    margin-right: 0;
+    .sub-menu li:last-child {
+        margin-right: 0;
+    }
 }
 
 .sub-menu li a {
     color: inherit;
 }
-
+.sub-menu li a:hover {
+    opacity: 0.5;
+}
 /*
 * — Primary Footer —
 */
