--- a/templates/base.twig
+++ b/templates/base.twig
@@ -109,13 +109,15 @@
 
 					<main class="main" role="main">
 						{% if menu_items %}
-						<div class="sub-menu">
-							<div class="container">
-								<ul>
-									{% for item in menu_items %}
-									<li class="{{item.id == current ? 'current-sub-menu-item'}}"><a href="{{item.link}}">{{item.name}}</a></li>
-									{% endfor %}
-								</ul>
+						<div class="sub-menu d-none d-lg-block">
+							<div class="fluid-container">
+								<div class="col">
+									<ul>
+										{% for item in menu_items %}
+										<li class="{{item.id == current ? 'current-sub-menu-item'}}"><a href="{{item.link}}">{{item.name}}</a></li>
+										{% endfor %}
+									</ul>
+								</div>
 							</div>
 						</div>
 						{% endif %}
