--- a/templates/base.twig
+++ b/templates/base.twig
@@ -64,15 +64,15 @@
 
 									<div class="row">
 
-										<div class="col-10 col-md-3">
+										<div class="col-10 col-md-3 col-lg-2">
 											{% set logo = TimberImage(options.header_logo) %} 
 											<a href="{{site.url}}" rel="home" title="{{site.title}}">
-												<img alt="{{logo.alt}}" src="{{logo.src}}">
+												<img alt="{{logo.alt}}" src="{{logo.src}}" class="header-logo">
 											</a>
 										</div>
 
 										
-										<div class="col-md-9 d-none d-lg-block">
+										<div class="d-none d-lg-block col-lg-10 navbars">
 
 											<ul class="navbar-secondary">
 												<li class="search">
@@ -80,7 +80,7 @@
 														<input class="form-control form-control-sm" placeholder="Search..." type="text" value="" name="s" id="s" aria-label="Search">
 													</form>
 												{% for item in header_secondary.get_items %}
-												<li>
+												<li class="navbar-secondary-link">
 													<a class="{{item.classes|join(' ')}}" href="{{item.link}}" target="{{item.target}}">{{item.name}}</a>
 												
 												{% endfor %}
