--- a/src/scss/spm.scss
+++ b/src/scss/spm.scss
@@ -63,6 +63,10 @@
     line-height: 1.1 !important;
 }
 
+.navbar-secondary-link:nth-child(2) {
+    padding-left: 15px;
+}
+
 .navbar-primary {
     position: absolute;
     bottom: 0;
@@ -418,8 +422,22 @@
     opacity: 0.5;
 }
 
-.header-menu-primary .current-menu-item, .header-menu-primary .current-page-ancestor {
-    color: $primary;
+.navbar-primary .current-menu-item, .navbar-primary .current-page-ancestor {
+    position: relative;
+}
+
+.navbar-primary .current-menu-item:after, .navbar-primary .current-page-ancestor:after {
+    position: absolute;
+    right: 0;
+    left: 0;
+    margin: 5px auto auto auto;
+    content: '';
+    display: block;
+    width: 0; 
+    height: 0; 
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-bottom: 10px solid $asc_lightest_gray;
 }
 
 .current-sub-menu-item {
