--- a/templates/base.twig
+++ b/templates/base.twig
@@ -64,7 +64,7 @@
 
 									<div class="row">
 
-										<div class="col-10 col-md-3 col-lg-2">
+										<div class="col-8 col-md-3 col-lg-2">
 											{% set logo = TimberImage(options.header_logo) %} 
 											<a href="{{site.url}}" rel="home" title="{{site.title}}">
 												<img alt="{{logo.alt}}" src="{{logo.src}}" class="header-logo">
@@ -96,8 +96,8 @@
 
 										</div>
 
-										<div class="col-2 col-md-9 text-right d-lg-none">
-											<a class="btn btn-primary my-3" id="mobile-menu-button" href="#"><i class="fas fa-bars"></i></a>
+										<div class="col-4 col-md-9 text-right d-lg-none text-right">
+											<a id="mobile-menu-button" href="#">Menu</a>
 										</div>
 									
 									</div>
