--- a/src/scss/spm.scss
+++ b/src/scss/spm.scss
@@ -18,6 +18,11 @@
     display: none;
 }
 
+#mobile-menu-button {
+    display: block;
+    margin-top: 15px;
+}
+
 .header-logo {
     margin: 20px 0 20px 15px;
 }
