--- a/templates/base.twig
+++ b/templates/base.twig
@@ -98,7 +98,25 @@
 
 										<div class="col-4 col-md-8 d-lg-none text-right">
 											<a id="mobile-menu-button" href="#">
-												<img src="../wp-content/themes/ascension/img/menu.svg">
+												{% if 'Academy' in site.name %}
+													<img src="../wp-content/themes/ascension/img/academy_menu.svg">
+												{% endif %}
+
+												{% if 'Ascension Catholic School' in site.name %}
+													<img src="../wp-content/themes/ascension/img/ascension_menu.svg">
+												{% endif %}
+
+												{% if 'Paul' in site.name %}
+													<img src="../wp-content/themes/ascension/img/jpII_menu.svg">
+												{% endif %}
+
+												{% if 'Church' in site.name %}
+													<img src="../wp-content/themes/ascension/img/parish_menu.svg">
+												{% endif %}
+
+												{% if 'Claver' in site.name %}
+													<img src="../wp-content/themes/ascension/img/spc_menu.svg">
+												{% endif %}
 											</a>
 										</div>
 									
