--- a/src/scss/spm.scss
+++ b/src/scss/spm.scss
@@ -20,8 +20,12 @@
 
 #mobile-menu-button {
     display: block;
-    margin-top: 15px;
+    margin-top: 20px;
     margin-right: 15px;
+}
+
+#mobile-menu-button:after {
+    content: 'Menu';
 }
 
 .header-logo {
