Make post thumbnails clickable

--- a/templates/index.twig
+++ b/templates/index.twig
@@ -12,7 +12,9 @@
 				{% for post in posts %}
 				<div class="col-md-6 post">
 					{% if post.thumbnail %}
-					<img class="post-thumbnail" src="{{post.thumbnail.src|resize(800, 500, 'center')}}">
+					<a href="{{post.link}}">
+						<img class="post-thumbnail" src="{{post.thumbnail.src|resize(800, 500, 'center')}}">
+					</a>
 					{% endif %}
 					
 					{% if post.categories %}
