--- a/src/scss/spm.scss
+++ b/src/scss/spm.scss
@@ -394,16 +394,16 @@
     padding-left: 0;
 }
 
+.buttons li {
+    display: inline;
+}
+
 .buttons li:nth-child(2) {
-    margin-top: 15px;
+    margin-left: 10px;
 }
 
 @media (min-width: 768px) {
-    .buttons li {
-        display: inline;
-    }
     .buttons li:nth-child(2) {
-        margin-top: 0;
         margin-left: 30px;
     }
 }
