Single CTA margin/padding

--- a/src/scss/spm.scss
+++ b/src/scss/spm.scss
@@ -727,8 +727,8 @@ h2.post-title {
 
 .cta-home .cta-content {
     background: $secondary;
-    margin-top: -120px;
-    padding: 40px 30px;
+    margin-top: 30px;
+    padding: 50px 30px 30px 40px;
     clip-path: polygon(0 10%, 100% 0, 100% 100%, 0% 100%);
 }
 
@@ -776,8 +776,8 @@ h2.post-title {
 .cta-landing .cta-content {
     background: $primary;
     color: $white;
-    margin-top: -120px;
-    padding: 40px 30px;
+    margin-top: -30px;
+    padding: 50px 30px 30px 40px;
     clip-path: polygon(0 10%, 100% 0, 100% 100%, 0% 100%);
 }
 
