School module last-child margin

--- a/src/scss/spm.scss
+++ b/src/scss/spm.scss
@@ -1183,7 +1183,7 @@ h2.post-title {
     margin-bottom: 30px !important;
 }
 .schools .card:last-child {
-    margin-bottom: 0;
+    margin-bottom: 0 !important;
 }
 .schools .card-body {
     padding: 0 15px;
