--- a/src/scss/spm.scss
+++ b/src/scss/spm.scss
@@ -18,10 +18,16 @@
     display: none;
 }
 
+.mobile-menu-button-container {
+    height: 100%;
+    padding-right: 15px;
+}
+
 #mobile-menu-button {
-    display: block;
-    margin-top: 20px;
-    margin-right: 15px;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    display: inline-block;
 }
 
 .header-logo {
