Increase overview H1 size on desktop

--- a/src/scss/spm.scss
+++ b/src/scss/spm.scss
@@ -1163,6 +1163,7 @@ h2.post-title {
 }
 
 @media (min-width: 992px) {
+    .overview h1 { font-size: 2.25rem; }
     .overview-primary { margin-bottom: 0; }
     .blurb { margin-bottom: 30px; }
 }
