--- a/src/scss/spm.scss
+++ b/src/scss/spm.scss
@@ -845,7 +845,8 @@ h2.post-title {
 .cta-pair img {
     border-bottom: 6px solid $primary;
 }
-.cta-pair .cta-content {
+// For CTAs with images only...
+.cta-pair .cta-content-with-image {
     margin-top: -30px;
 }
 .cta-pair .cta-content div {
@@ -864,11 +865,12 @@ h2.post-title {
     margin-bottom: 20px;
 }
 @media (min-width: 768px) {
-    .cta-pair .cta {
+    .cta-pair .cta:last-child {
         margin-bottom: 0 !important;
     }
     
-    .cta-pair .cta-content {
+    // For CTAs with images only
+    .cta-pair .cta-content-with-image {
         margin-top: -60px;
     }
 
@@ -878,6 +880,11 @@ h2.post-title {
 
     .cta-pair p {
         font-size: 1.125rem;
+    }
+}
+@media (min-width: 992px) {
+    .cta-pair .cta {
+        margin-bottom: 0 !important;
     }
 }
 
