Wrap Privacy Policy in text module div for better styling

--- a/templates/page.twig
+++ b/templates/page.twig
@@ -15,7 +15,9 @@
 		<div class="container">
         	<div class="row">
             	<div class="col-lg-8">
-					{{post.content}}
+					<div class="module text">
+						{{post.content}}
+					</div>
 				</div>
 			</div>
 		</div>
