--- a/src/scss/spm.scss
+++ b/src/scss/spm.scss
@@ -34,10 +34,6 @@
     margin: 20px 0 20px 15px;
 }
 
-.navbars {
-    position: relative;
-}
-
 .navbars ul {
     list-style: none;
     margin: 0;
@@ -46,7 +42,8 @@
 
 .navbars li {
     display: inline-block;
-    padding: 15px;
+    margin-left: -1px;
+    padding: 16px;
 }
 
 .navbars li:last-child {
@@ -54,10 +51,6 @@
 }
 
 .navbar-secondary {
-    position: absolute;
-    top: 0;
-    right: 0;
-
     color: #fff;
     font-size: 0.875rem;
     line-height: 1.1;
@@ -81,10 +74,6 @@
 }
 
 .navbar-primary {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-
     font-weight: bold;
     line-height: 1.2;
     text-align: right;
@@ -443,7 +432,7 @@
     position: absolute;
     right: 0;
     left: 0;
-    margin: 5px auto auto auto;
+    margin: 6px auto auto auto;
     content: '';
     display: block;
     width: 0; 
