--- a/templates/base.twig
+++ b/templates/base.twig
@@ -64,7 +64,7 @@
 
 									<div class="row">
 
-										<div class="col-8 col-md-4 col-lg-2">
+										<div class="col-8 col-md-4 col-lg-3 col-xl-2">
 											{% set logo = TimberImage(options.header_logo) %} 
 											<a href="{{site.url}}" rel="home" title="{{site.title}}">
 												<img alt="{{logo.alt}}" src="{{logo.src}}" class="header-logo">
@@ -72,27 +72,29 @@
 										</div>
 
 										
-										<div class="d-none d-lg-block col-lg-10 navbars">
+										<div class="d-none d-lg-block col-lg-9 col-xl-10 navbars">
 
-											<ul class="navbar-secondary">
-												<li class="search">
-													<form class="form-inline" action="{{site.url}}" id="searchform" method="get" role="search"  >
-														<input class="form-control form-control-sm" placeholder="Search..." type="text" value="" name="s" id="s" aria-label="Search">
-													</form>
-												{% for item in header_secondary.get_items %}
-												<li class="navbar-secondary-link">
-													<a class="{{item.classes|join(' ')}}" href="{{item.link}}" target="{{item.target}}">{{item.name}}</a>
+											<div class="h-100 d-flex flex-column justify-content-between">				
+												<ul class="navbar-secondary">
+													<li class="search">
+														<form class="form-inline" action="{{site.url}}" id="searchform" method="get" role="search"  >
+															<input class="form-control form-control-sm" placeholder="Search..." type="text" value="" name="s" id="s" aria-label="Search">
+														</form>
+													{% for item in header_secondary.get_items %}
+													<li class="navbar-secondary-link">
+														<a class="{{item.classes|join(' ')}}" href="{{item.link}}" target="{{item.target}}">{{item.name}}</a>
+													
+													{% endfor %}
+												</ul>
 												
-												{% endfor %}
-											</ul>
-
-											<ul class="navbar-primary">
-												{% for item in header_primary.get_items %}
-												<li>
-													<a class="{{item.classes|join(' ')}}" href="{{item.link}}" target="{{item.target}}">{{item.name}}</a>
-												</li>
-												{% endfor %}
-											</ul>
+												<ul class="navbar-primary">
+													{% for item in header_primary.get_items %}
+													<li>
+														<a class="{{item.classes|join(' ')}}" href="{{item.link}}" target="{{item.target}}">{{item.name}}</a>
+													
+													{% endfor %}
+												</ul>
+											</div>
 
 										</div>
 
