--- a/templates/partial/colors.twig
+++ b/templates/partial/colors.twig
@@ -18,11 +18,11 @@
 
         .special:link, .special:visited, .main p a:link, .main p a:visited, .contact a:link, .contact a:visited { color: {{colors.primary}} !important; }
 
-        .navbar-primary a:active, .navbar-primary a:hover, .navbar-primary .current-menu-item, .navbar-primary .current-page-ancestor, .tribe-events-sub-nav a:link, .tribe-events-sub-nav a:visited, .tribe-events-month-event-title a:link, .tribe-events-month-event-title a:visited, .event-is-recurring a:link, .event-is-recurring a:visited, .tribe-events-event-meta a:link, .tribe-events-event-meta a:visited {
+        .navbar-primary a:active, .navbar-primary a:hover, .navbar-primary .current-menu-item, .navbar-primary .current-page-ancestor, .tribe-events-sub-nav a:link, .tribe-events-sub-nav a:visited, .tribe-events-month-event-title a:link, .tribe-events-month-event-title a:visited, .event-is-recurring a:link, .event-is-recurring a:visited, .tribe-events-event-meta a:link, .tribe-events-event-meta a:visited, .tribe-related-events-title a:link, .tribe-related-events-title a:visited {
             color: {{colors.primary}} !important;
         }
 
-        .special:active, .special:hover, .main p a:active, .main p a:hover, .contact a:active, .contact a:hover, .tribe-events-sub-nav a:active, .tribe-events-sub-nav a:hover, .tribe-events-month-event-title a:active, .tribe-events-month-event-title a:hover, .event-is-recurring:active, .event-is-recurring:hover, .tribe-events-event-meta a:active, .tribe-events-event-meta a:hover {
+        .special:active, .special:hover, .main p a:active, .main p a:hover, .contact a:active, .contact a:hover, .tribe-events-sub-nav a:active, .tribe-events-sub-nav a:hover, .tribe-events-month-event-title a:active, .tribe-events-month-event-title a:hover, .event-is-recurring:active, .event-is-recurring:hover, .tribe-events-event-meta a:active, .tribe-events-event-meta a:hover, .tribe-related-events-title a:active, .tribe-related-events-title a:hover {
             color: {{colors.primary_hover}} !important;
         }
 
