--- a/src/scss/spm.scss
+++ b/src/scss/spm.scss
@@ -31,7 +31,7 @@
 }
 
 .header-logo {
-    margin: 20px 0 20px 15px;
+    margin: 20px 0 20px 30px;
 }
 
 .navbars ul {
@@ -96,7 +96,7 @@
 }
 .sub-menu ul {
     list-style: none;
-    padding-left: 0;
+    padding-left: 15px;
     margin-bottom: 0;
 }
 
