--- a/src/scss/spm.scss
+++ b/src/scss/spm.scss
@@ -888,6 +888,12 @@ h2.post-title {
 .cta-group h2 {
     border-left-color: $tertiary;
 }
+.cta-group h3 a:link, .cta-group h3 a:visited, .cta-group h3 a:active, .cta-group h3 a:hover {
+    color: inherit;
+}
+.cta-group h3 a:hover {
+    opacity: 0.5;
+}
 .cta-group .cta {
     margin-bottom: 30px;
 }
