--- a/src/scss/spm.scss
+++ b/src/scss/spm.scss
@@ -914,6 +914,9 @@ h2.post-title {
     line-height: 1.1;
     margin-bottom: 15px;
 }
+.cta-group p {
+    margin-bottom: 15px;
+}
 
 @media (min-width: 768px) {
     .cta-group .cta {
