--- a/templates/sidebar-module/post_feed.twig
+++ b/templates/sidebar-module/post_feed.twig
@@ -26,6 +26,9 @@
     {% set events %}
         {% for item in category.get_posts(args) %}
             <div class="sidebar-post-feed-event">
+                <!--
+                {{item|print_r}}
+                -->
                 <span class="sidebar-post-feed-event-date">{{event_date}}</span>
                 <h4><a href="{{item.link}}">{{item.name}}</a></h4>
             </div>
