--- a/templates/sidebar-module/post_feed.twig
+++ b/templates/sidebar-module/post_feed.twig
@@ -9,9 +9,9 @@
 
     {% if post_type == 'events' %}
         {% set args = args|merge({
-            'meta_key' : '_EventStartDate',
+            'meta_key' : '_EventStartDateUTC',
             'orderby' : 'meta_value',
-            'order' : 'DESC',
+            'order' : 'ASC',
         }) %}
         {% set event_start_date = item._EventStartDate|date("F d") %}
         {% set event_start_time = item._EventStartDate|date("g:i a") %}
