--- a/templates/sidebar-module/post_feed.twig
+++ b/templates/sidebar-module/post_feed.twig
@@ -25,9 +25,9 @@
                 <!--
                 {{item|print_r}}
                 -->
-                {% set event_start_date = item.custom._tribe_modified_fields._EventStartDate|date("F d") %}
-                {% set event_start_time = item.custom._tribe_modified_fields._EventStartDate|date("g:i a") %}
-                {% set event_end_time = item.custom._tribe_modified_fields._EventEndDate|date("g:i a") %}
+                {% set event_start_date = item._EventStartDate|date("F d") %}
+                {% set event_start_time = item._EventStartDate|date("g:i a") %}
+                {% set event_end_time = item._EventEndDate|date("g:i a") %}
                 {% set event_date = event_start_date %}
                 <span class="sidebar-post-feed-event-date">{{event_date}}</span>
                 <h4><a href="{{item.link}}">{{item.name}}</a></h4>
