Changed order to DESC

--- a/templates/module/post_feed.twig
+++ b/templates/module/post_feed.twig
@@ -7,7 +7,7 @@
     {% set args = args|merge({
         'meta_key' : '_EventStartDate',
         'orderby' : 'meta_value',
-        'order' : 'ASC',
+        'order' : 'DESC',
     }) %}
 {% else %}
     {% set args = args|merge({
