--- a/templates/footer-primary.twig
+++ b/templates/footer-primary.twig
@@ -90,6 +90,14 @@
                     <a href="{{site.link}}"><img src="{{logo.src}}" alt="{{logo.alt}}"></a>
 
                 {% endif %}
+
+                <div id="google_translate_element" class="mt-3"></div>
+            <script type="text/javascript">
+                function googleTranslateElementInit() {
+                    new google.translate.TranslateElement({pageLanguage: 'en', includedLanguages: 'es', layout: google.translate.TranslateElement.FloatPosition.TOP_LEFT}, 'google_translate_element');
+                }
+            </script>
+		    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
             </div>
         </div>
 </div>
