--- a/src/scss/spm.scss
+++ b/src/scss/spm.scss
@@ -435,6 +435,7 @@ body {
     position: relative;
 }
 
+/*
 .navbar-primary .current-menu-item:after, .navbar-primary .current-page-ancestor:after {
     position: absolute;
     right: 0;
@@ -448,6 +449,7 @@ body {
     border-right: 10px solid transparent;
     border-bottom: 10px solid $asc_lightest_gray;
 }
+*/
 
 .current-sub-menu-item {
     border-bottom: 2px solid $primary;
