In-list link colors

--- a/templates/partial/colors.twig
+++ b/templates/partial/colors.twig
@@ -16,13 +16,13 @@
             color: {{colors.primary}} !important;
         }
 
-        .special:link, .special:visited, .main p a:link, .main p a:visited, .contact a:link, .contact a:visited { color: {{colors.primary}} !important; }
+        .special:link, .special:visited, .main p a:link, .main p a:visited, .main ol a:link, .main ol a:visited, .main ul a:link, .main ul a:visited, .contact a:link, .contact a:visited { color: {{colors.primary}} !important; }
 
         .navbar-primary a:active, .navbar-primary a:hover, .navbar-primary .current-menu-item, .navbar-primary .current-page-ancestor, .tribe-events-sub-nav a:link, .tribe-events-sub-nav a:visited, .tribe-events-month-event-title a:link, .tribe-events-month-event-title a:visited, .event-is-recurring a:link, .event-is-recurring a:visited, .tribe-events-event-meta a:link, .tribe-events-event-meta a:visited, .tribe-related-events-title a:link, .tribe-related-events-title a:visited, .tribe-event-url:link, .tribe-event-url:visited, .tribe-events-read-more:link, .tribe-events-read-more:visited {
             color: {{colors.primary}} !important;
         }
 
-        .special:active, .special:hover, .main p a:active, .main p a:hover, .contact a:active, .contact a:hover, .tribe-events-sub-nav a:active, .tribe-events-sub-nav a:hover, .tribe-events-month-event-title a:active, .tribe-events-month-event-title a:hover, .event-is-recurring:active, .event-is-recurring:hover, .tribe-events-event-meta a:active, .tribe-events-event-meta a:hover, .tribe-related-events-title a:active, .tribe-related-events-title a:hover, .tribe-event-url:active, .tribe-event-url:hover, .tribe-events-read-more:active, .tribe-events-read-more:hover {
+        .special:active, .special:hover, .main p a:active, .main p a:hover, .main ol a:hover, .main ol a:hover, .main ul a:hover, .main ul a:hover, .contact a:active, .contact a:hover, .tribe-events-sub-nav a:active, .tribe-events-sub-nav a:hover, .tribe-events-month-event-title a:active, .tribe-events-month-event-title a:hover, .event-is-recurring:active, .event-is-recurring:hover, .tribe-events-event-meta a:active, .tribe-events-event-meta a:hover, .tribe-related-events-title a:active, .tribe-related-events-title a:hover, .tribe-event-url:active, .tribe-event-url:hover, .tribe-events-read-more:active, .tribe-events-read-more:hover {
             color: {{colors.primary_hover}} !important;
         }
 
